--- a/B2BApp.Web/Views/Siparis/Index.cshtml
+++ b/B2BApp.Web/Views/Siparis/Index.cshtml
@@ -181,7 +181,7 @@
                                 return "Aktif" 
                             } else 
                             { 
-                                return "Bitmiş"} 
+                                return "Pasif"} 
                             } 
                     },
                     {
