--- a/B2BApp.Web/Views/Satis/SatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/SatisRapor.cshtml
@@ -74,16 +74,57 @@
         </table>
     </div>
     <!--Tablo End-->
+
+
+    <br />
+    <div class="row" style="--bs-gutter-x: 0rem;">
+        <div class="col-md-6">
+            <div>
+                <div class="p-3 border bg-light">
+
+                    <canvas id="kategoriToplamSatisPie" width="618" height="309"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div>
+                <div class="p-3 border bg-light">
+
+                    <canvas id="urunToplamSatisPie" width="618" height="309"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row" style="--bs-gutter-x: 0rem;">
+        <div class="col-md-6">
+            <div>
+                <div class="p-3 border bg-light">
+
+                    <canvas id="firmaToplamSatisBar"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div>
+                <div class="p-3 border bg-light">
+
+                    <canvas id="subeToplamSatisBar"></canvas>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <br />
+    <br />
 </div>
 
 
 <script type="text/javascript">
-    let table;
-    let tarih1 = null;
-    let tarih2 = null;
-    let firma = null;
-    var kategori = null;
-    var sube = null;
+    let table; let tarih1 = null; let tarih2 = null; let firma = null; var kategori = null; var sube = null;
+
+    var kategoriSatis_pieChart; var urunToplamSatis_pieChart; var subeToplamSatis_barChart; var firmaToplamSatis_barChart;
 
 
     function loadTable() {
@@ -104,6 +145,8 @@
                 'firmaId': firma
             }
         }).done(function (response) {
+            chartVerileriniHesapla(response);
+
             table = $('#satislarTable').DataTable({
                 "language": { "url": '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json' },
                 "data": response.data,
@@ -161,6 +204,87 @@
         });
     };
 
+    function chartVerileriniHesapla(response) {
+        var satisDto = response.data;
+        //ürünler
+        const urunToplamSatis = {};
+        var satis = satisDto.reduce(function (accumulator, item) {
+            var existingItem = accumulator.find(function (x) {
+                return x.urunAdi === item.urun.urunAdi;
+            });
+            if (existingItem) {
+                existingItem.toplam += item.toplam;
+            } else {
+                accumulator.push({
+                    urunAdi: item.urun.urunAdi,
+                    toplam: item.toplam
+                });
+            }
+            return accumulator;
+        }, []).forEach(item => {
+            urunToplamSatis[item.urunAdi] = item.toplam;
+        });
+
+        //subeler
+        const subelerToplamSatis = {};
+        var subeler = satisDto.reduce(function (accumulator, item) {
+            var existingItem = accumulator.find(function (x) {
+                return x.subeAdi === item.sube.subeAdi;
+            });
+            if (existingItem) {
+                existingItem.toplam += item.toplam;
+            } else {
+                accumulator.push({
+                    subeAdi: item.sube.subeAdi,
+                    toplam: item.toplam
+                });
+            }
+            return accumulator;
+        }, []).forEach(item => {
+            subelerToplamSatis[item.subeAdi] = item.toplam;
+        });
+
+        //kategoriler
+        const kategoriToplamSatis = {};
+        var kategoriler = satisDto.reduce(function (accumulator, item) {
+            var existingItem = accumulator.find(function (x) {
+                return x.kategoriId === item.urun.kategoriId;
+            });
+            if (existingItem) {
+                existingItem.toplam += item.toplam;
+            } else {
+                accumulator.push({
+                    kategoriId: item.urun.kategoriId,
+                    toplam: item.toplam
+                });
+            }
+            return accumulator;
+        }, []).forEach(item => {
+            kategoriToplamSatis[item.kategoriId] = item.toplam
+        });
+
+        //firmalar
+        const firmalarToplamSatis = {};
+        var kategoriler = satisDto.reduce(function (accumulator, item) {
+            var existingItem = accumulator.find(function (x) {
+                return x.firmaId === item.sube.firmaId;
+            });
+            if (existingItem) {
+                existingItem.toplam += item.toplam;
+            } else {
+                accumulator.push({
+                    firmaId: item.sube.firmaId,
+                    toplam: item.toplam
+                });
+            }
+            return accumulator;
+        }, []).forEach(item => {
+            firmalarToplamSatis[item.firmaId] = item.toplam
+        });
+        initCharts(kategoriToplamSatis, urunToplamSatis, subelerToplamSatis, firmalarToplamSatis);
+
+    }
+
     loadTable();
 
     function applyFilter() {
@@ -176,8 +300,12 @@
         table.destroy();
         loadTable();
 
-    }
+        kategoriSatis_pieChart.destroy()
+        urunToplamSatis_pieChart.destroy()
+        subeToplamSatis_barChart.destroy()
+        firmaToplamSatis_barChart.destroy()
 
+    }
 
     function loadSelectsDatas() {
 
@@ -234,6 +362,194 @@
 
 
         });
+
+
+    }
+
+    function initCharts(kategoriToplamSatis, urunToplamSatis, subelerToplamSatis, firmalarToplamSatis) {
+        var ctxKategoriToplamSatisPie = document.getElementById('kategoriToplamSatisPie');
+        ctxKategoriToplamSatisPie.width = 618;
+        ctxKategoriToplamSatisPie.height = 309;
+
+        var ctxUrunToplamSatisPie = document.getElementById('urunToplamSatisPie');
+        ctxUrunToplamSatisPie.width = 618;
+        ctxUrunToplamSatisPie.height = 309;
+
+        var ctxSubeToplamSatisBar = document.getElementById('subeToplamSatisBar');
+        ctxSubeToplamSatisBar.width = 618;
+        ctxSubeToplamSatisBar.height = 309;
+
+
+
+
+        var ctxFirmaToplamSatisBar = document.getElementById('firmaToplamSatisBar');
+        ctxFirmaToplamSatisBar.width = 618;
+        ctxFirmaToplamSatisBar.height = 309;
+
+
+
+
+
+        urunToplamSatis_pieChart = new Chart(ctxUrunToplamSatisPie, {
+
+            type: 'doughnut',
+            data: {
+                labels: Object.keys(urunToplamSatis),
+                datasets: [{
+                    label: 'Toplam Satış',
+                    data: Object.values(urunToplamSatis),
+                    borderWidth: 2
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+
+                plugins: {
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Ürünlere Göre Satış',
+                        position: 'bottom'
+                    }
+
+                }
+            }
+        });
+
+        subeToplamSatis_barChart = new Chart(ctxSubeToplamSatisBar, {
+            type: 'doughnut',
+            data: {
+                labels: Object.keys(subelerToplamSatis),
+                datasets: [{
+                    label: 'Toplam Satış',
+                    data: Object.values(subelerToplamSatis),
+                    borderWidth: 2
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+
+                plugins: {
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Subelere Göre Satış',
+                        position: 'bottom'
+                    }
+
+                }
+            }
+        });
+
+
+
+        //KATEGORİLER
+        $.ajax({
+            url: 'https://10.60.60.141/api/kategori/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain',
+                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+            }
+        }).done(function (response) {
+            console.log(response.data);
+            Object.keys(kategoriToplamSatis).forEach(function (key) {
+                var firma = response.data.find(x => x.id == key);
+
+                kategoriToplamSatis[firma.kategoriAdi] = kategoriToplamSatis[key];
+                delete kategoriToplamSatis[key]
+            });
+
+
+            kategoriSatis_pieChart = new Chart(ctxKategoriToplamSatisPie, {
+                type: 'doughnut',
+                data: {
+                    labels: Object.keys(kategoriToplamSatis),
+                    datasets: [{
+                        label: 'Toplam Satış',
+                        data: Object.values(kategoriToplamSatis),
+                        borderWidth: 2
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Kategorilere Göre Satış',
+                            position: 'bottom'
+                        }
+
+                    }
+                }
+            });
+
+        });
+
+
+
+
+        //firmlar
+        $.ajax({
+            url: 'https://10.60.60.141/api/Firma/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain',
+                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+            }
+        }).done(function (response) {
+            console.log(response.data);
+            Object.keys(firmalarToplamSatis).forEach(function (key) {
+                var firma = response.data.find(x => x.id == key);
+                firmalarToplamSatis[firma.firmaAdi] = firmalarToplamSatis[key];
+                delete firmalarToplamSatis[key]
+            });
+
+
+
+            firmaToplamSatis_barChart = new Chart(ctxFirmaToplamSatisBar, {
+                type: 'doughnut',
+                data: {
+                    labels: Object.keys(firmalarToplamSatis),
+                    datasets: [{
+                        label: 'Toplam Satış',
+                        data: Object.values(firmalarToplamSatis),
+                        borderWidth: 2
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Firmalara Göre Satış',
+                            position: 'bottom'
+                        }
+
+                    }
+                }
+            });
+
+        });
+
+
+
 
 
     }
