--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -212,6 +212,19 @@
                                         <span class="item-name">Satışlar Rapor</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link " asp-controller="Satis" asp-action="KSatisRapor">
+                                        <i class="icon">
+                                            <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
+                                                <g>
+                                                    <circle cx="12" cy="12" r="8" fill="currentColor"></circle>
+                                                </g>
+                                            </svg>
+                                        </i>
+                                        <i class="sidenav-mini-icon"> B </i>
+                                        <span class="item-name">Satış Karşılaştır</span>
+                                    </a>
+                                </li>
 
 
                             </ul>
