--- a/B2BApp.Web/Views/Satis/SatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/SatisRapor.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <h2>Satışlar</h2>
+    <h2>Satış Rapor</h2>
 
 
 
@@ -14,7 +14,7 @@
         <!-- Existing code -->
         <div class="row">
             <div class="col">
-                <label for="tarih1">Tarih1:</label>
+                <label for="tarih1">İlk Tarih:</label>
                 <input type="date" id="tarih1" class="form-control">
             </div>
             <div class="col">
@@ -25,7 +25,7 @@
         <br />
         <div class="row">
             <div class="col">
-                <label for="firma">Firmalar:</label>
+                <label for="firma">Son Tarih:</label>
                 <select id="firma" class="form-control js-example-basic-single">
                     <option></option>
 
