--- a/B2BApp.Web/Views/Satis/Index.cshtml
+++ b/B2BApp.Web/Views/Satis/Index.cshtml
@@ -1,37 +1,37 @@
 ﻿@{
     ViewData["Title"] = "Index";
-        Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 
 }
 
 <div class="container">
-    <h2>Satışlar</h2>
 
-    <div class="" style="display: flex;justify-content: flex-end;">
-        <button onClick="loadData()" class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#Ekleme" aria-controls="Ekleme"><i class="bi bi-plus"></i> Yeni Satış</button>
-
-    </div>
     <br />
 
 
 
     <div class="p-3 border bg-light">
+        <h2>Satışlar</h2>
+        <hr />
+        <div class="" style="display: flex;justify-content: flex-end;">
+            <button onClick="loadData()" class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#Ekleme" aria-controls="Ekleme"><i class="bi bi-plus"></i> Yeni Satış</button>
 
-    <table id="satislarTable" class="display" style="width:100%">
-        <thead>
-            <tr>
-                <th>Şube Adi</th>
-                <th>Ürün</th>
-                <th>Satış Miktarı</th>
-                <th>Toplam</th>
-                <th>Tarih</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tfoot>
-        </tfoot>
-    </table>
-</div>
+        </div>
+        <table id="satislarTable" class="display" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Şube Adi</th>
+                    <th>Ürün</th>
+                    <th>Satış Miktarı</th>
+                    <th>Toplam</th>
+                    <th>Tarih</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tfoot>
+            </tfoot>
+        </table>
+    </div>
 </div>
 
 @* Ekleme *@
@@ -48,7 +48,7 @@
             <br />
 
             <div class="input-group">
-                <label for="subeSelect" class="form-label" style="margin-right: 10px;">Sube: </label> 
+                <label for="subeSelect" class="form-label" style="margin-right: 10px;">Sube: </label>
                 <select id="subeSelect" placeholder='select item'>
                     <option></option>
                 </select>
@@ -56,7 +56,7 @@
             <br />
 
             <div class="input-group">
-                <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label> 
+                <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label>
                 <select class="select2" id="urunSelect" placeholder='select item'>
                     <option></option>
                 </select>
@@ -97,9 +97,9 @@
     <div class="offcanvas-body">
 
 
-       <div class="container">
+        <div class="container">
 
-                       <label type="text" id="satisId" value="" hidden></label>
+            <label type="text" id="satisId" value="" hidden></label>
 
             <br />
 
@@ -149,10 +149,10 @@
     $(document).ready(function loadTable() {
         table = $('#satislarTable').DataTable({
             "language": { "url": '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json' },
-            "ajax": 
+            "ajax":
             {
                 "url": "https://10.60.60.141/api/Satis/getAllWithUrunAndSube",
-                    
+
                 'type': 'GET',
                 'beforeSend': function (request) {
                     request.setRequestHeader("Authorization", "Bearer " + "@ViewBag.JwtCookie");
@@ -181,8 +181,9 @@
                 { "data": 'urun.urunAdi' },
                 { "data": 'satisMiktari', className: 'text-start' },
                 { "data": 'toplam', className: 'text-start' },
-                { "data": 'satisTarihi',
-                    "render" : function(data){
+                {
+                    "data": 'satisTarihi',
+                    "render": function (data) {
                         // JavaScript Date objesine dönüştürme
                         var tarih = new Date(data);
 
@@ -192,7 +193,7 @@
                         var gun = ('0' + tarih.getDate()).slice(-2); // Günü 2 basamaklı olarak almak için
                         var saat = ('0' + tarih.getHours()).slice(-2); // Saati 2 basamaklı olarak almak için
                         var dakika = ('0' + tarih.getMinutes()).slice(-2); // Dakikayı 2 basamaklı olarak almak için
-                      
+
 
                         // Yıl/ay/gün - saat formatında birleştirme
                         var formatliTarih = yil + '/' + ay + '/' + gun + ' - ' + saat + ':' + dakika;
@@ -201,13 +202,14 @@
                         return formatliTarih;
                     }
                 },
-                { "data": "id",
+                {
+                    "data": "id",
                     "render": function (data) {
                         return `
-                         <div class="w-75 btn-group" role="group">
-                               <a onClick=loadForUpdate("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#Guncelleme" aria-controls="Guncelleme"></i>Edit</a>
-                               <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
-                         </div>`
+                             <div class="w-75 btn-group" role="group">
+                                   <a onClick=loadForUpdate("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#Guncelleme" aria-controls="Guncelleme"></i>Edit</a>
+                                   <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
+                             </div>`
                     },
                     "width": "20%"
                 },
@@ -275,23 +277,23 @@
 
 
         $.ajax({
-          url: 'https://10.60.60.141/api/Satis',
-          crossDomain: true,
-          method: 'post',
-          headers: {
+            url: 'https://10.60.60.141/api/Satis',
+            crossDomain: true,
+            method: 'post',
+            headers: {
                 'accept': 'text/plain',
                 'Authorization': "Bearer " + "@ViewBag.JwtCookie"
-          },
-          contentType: 'application/json',
-          // data: '{\n  "id": "string",\n  "subeId": "string",\n  "urunId": "string",\n  "satisMiktari": 0,\n  "satisTarihi": "2024-06-25T08:55:04.216Z",\n  "toplam": 0\n}',
-          data: JSON.stringify({
-            'id': '',
-            'subeId': subeId,
-            'urunId': urunId,
-            'satisMiktari': satisMiktari,
-            'satisTarihi': satisTarihi,
-            'toplam': 0
-          })
+            },
+            contentType: 'application/json',
+            // data: '{\n  "id": "string",\n  "subeId": "string",\n  "urunId": "string",\n  "satisMiktari": 0,\n  "satisTarihi": "2024-06-25T08:55:04.216Z",\n  "toplam": 0\n}',
+            data: JSON.stringify({
+                'id': '',
+                'subeId': subeId,
+                'urunId': urunId,
+                'satisMiktari': satisMiktari,
+                'satisTarihi': satisTarihi,
+                'toplam': 0
+            })
         }).done(function (response) {
             if (response != null) {
                 $("#eklemeClose").click()
@@ -422,7 +424,7 @@
             $("#subeSelectUpdate").val(response.data.sube.id).trigger('change');
             $("#urunSelectUpdate").val(response.data.urun.id).trigger('change');
             $("#satisMiktariUpdate").val(response.data.satisMiktari);
-            $("#satisTarihiUpdate").val( new Date(response.data.satisTarihi).toISOString().slice(0, 16));
+            $("#satisTarihiUpdate").val(new Date(response.data.satisTarihi).toISOString().slice(0, 16));
             $("#satisId").val(response.data.id);
 
 
@@ -443,25 +445,25 @@
         var satisMiktari = $("#satisMiktariUpdate").val();
         var satisTarihi = $("#satisTarihiUpdate").val();
         var Id = $("#satisId").val();
-        
+
 
         $.ajax({
-          url: 'https://10.60.60.141/api/Satis?satisId=' +Id,
-          crossDomain: true,
-          method: 'put',
-          headers: {
+            url: 'https://10.60.60.141/api/Satis?satisId=' + Id,
+            crossDomain: true,
+            method: 'put',
+            headers: {
                 'accept': 'text/plain',
                 'Authorization': "Bearer " + "@ViewBag.JwtCookie"
-          },
-          contentType: 'application/json',
-          data: JSON.stringify({
-            'id': Id,
-            'subeId': subeSelectId,
-            'urunId': urunSelectId,
-            'satisMiktari': satisMiktari,
-            'satisTarihi': satisTarihi,
-            'toplam': 0
-          })
+            },
+            contentType: 'application/json',
+            data: JSON.stringify({
+                'id': Id,
+                'subeId': subeSelectId,
+                'urunId': urunSelectId,
+                'satisMiktari': satisMiktari,
+                'satisTarihi': satisTarihi,
+                'toplam': 0
+            })
         }).done(function (response) {
 
             $("#guncelleClose").click()
